# Antigravity-OS

./: .gitignore  .gitignore_new  DESKTOP_ORGANIZATION_GUIDE.md  Integrated_System_Specs.md  README.md  RecordThought.bat  THINKING_OS_DASHBOARD.html  Todays_Tasks_from_Email.md  ai_collaboration_test.md  ai_comparison_index.html  check_calendar.py  check_interview_schedule.py  cleanup.py  gmail_out.txt  large_tracked_files.txt  light_scatter_ai1_haiku.html  light_scatter_ai2_optimized.html  light_scatter_ai3_raycasting.html  organize_desktop.py  qumi_ui_concept.html  soul_api_server.py  tmp_objects.txt  tmp_simple_slack.py
.github/: copilot-instructions.md
VECTIS_SYSTEM_FILES/: auto_accept_bot.py  generate_task_dashboard.py  system_bridge.py  vectis_hub.py
VECTIS_SYSTEM_FILES/_MISC_FILES/vectis_core_rs/: Cargo.toml
_launchers/: DESKTOP_HUD_OLD.bat  EGO_INTELLIGENCE_VIEWER.bat  GIT_AUTO_SYNC.bat  GO_CAREER.bat  INDEX.md  INTELLIGENCE_CHAOS.bat  INTELLIGENCE_PATROL.bat  INTERVIEW_HUB.bat  LAUNCHER_MAIN.bat  LAUNCH_HUB.bat  OMNI_DASHBOARD.bat  ONISHI_DOJO.bat  RUST_COMMAND_CENTER.bat  SPI_DOJO.bat  START_AUTONOMOUS_CODER.bat  START_DRIVE_RELAY.bat  START_EGO.bat  START_INTEGRATED_OS_CORE.bat  START_LOCAL_BRAIN.bat  START_OMNI.bat  START_OPEN_SAUCE_AGENT.bat  START_PRACTICE.bat  START_PRACTICE.ps1  START_PRACTICE.py  VISUAL_CODER_3D.bat  Voice_Typer.bat  YouTube_CLI.bat  YouTube_Web.bat  ZEN_UI.bat  update_schedule.bat  upload_sources_to_nlm.ps1
agents/: soul_api_server.py  (+1 more)
system/VECTIS_SYSTEM_FILES/apps/MEDIA/INTELLIGENCE_HUB/career_refiner_rs/: Cargo.toml
(+9828 files in other folders)
