[package]
name = "vectis_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "vectis_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.11"
unicode-normalization = "0.1"
flate2 = "1.0"
sha2 = "0.10"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
