[package]
name = "career_refiner_rs"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
chrono = "0.4"
glob = "0.3"
dotenvy = "0.15"
walkdir = "2.3"
